Fixed properties view and scrollbar appearing (#41)

--- a/src/src/components/Editors/styles.scss
+++ b/src/src/components/Editors/styles.scss
@@ -59,7 +59,7 @@
   overflow-y: hidden;
 
   &:hover {
-    overflow-y: auto;
+    overflow-y: overlay;
   }
 
   .rule-item-button {
@@ -140,7 +140,7 @@
   padding: 20px 50px 10px;
 
   &:hover {
-    overflow-y: auto;
+    overflow-y: overlay;
   }
 }
 
@@ -581,7 +581,7 @@ input[type="file"] {
   overflow: hidden;
 
   &:hover {
-    overflow-y: auto;
+    overflow-y: overlay;
   }
 
   .area-wrapper {
